test/io/ferguson/bits-errors.negative-readbits.good
bits-errors.chpl:45: error: halt reached - readbits nbits=-1 < 0
